# asterixdb-mcp-server

./: .env.example  .gitignore  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/instructions/: *.instructions.md
src/asterixdb_mcp/: __init__.py  artifacts.py  audit_log.py  auth.py  builtins_catalog.py  cc_client.py  compiler_params.py  completions.py  config.py  context_id.py  egress.py  errors.py  hint_deriver.py  http_app.py  http_security.py  index_catalog.py  inventory.py  job_parser.py  naming.py  output_schemas.py  permits.py  plan_guard.py  plan_parser.py  profile_parser.py  sample_stats.py  server.py  statement_guard.py  tool_annotations.py
tests/: conftest.py
tests/contract/: test_call_surface.py  test_tools_list.py
tests/unit/: test_analyze_dataverse.py  test_artifacts.py  test_async_query.py  test_audit_log.py  test_auth.py  test_cc_client.py  test_cc_client_async.py  test_check_index_usage.py  test_compiler_params.py  test_completions.py  test_config.py  test_config_parameters.py  test_context_id.py  test_dataset_stats.py  test_describe_dataverse.py  test_egress.py  test_errors.py  test_execute_query.py  test_functions.py  test_get_cluster_status.py  test_get_reference.py  test_get_schema.py  test_health_check.py  test_hint_deriver.py  test_http_app.py  test_http_security.py  test_index_catalog.py  test_introspect.py  test_inventory.py  test_job_parser.py  test_list_datasets.py  test_list_dataverses.py  test_naming.py  test_node_diagnostics.py  test_output_schemas.py  test_permits.py  test_physical_plan.py  test_plan_guard.py  (+17 more)
(+33 files in other folders)
