[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asterixdb-mcp-server"
version = "0.1.0"
description = "Model Context Protocol gateway for Apache AsterixDB"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Vivek Gangavarapu" }]
keywords = ["mcp", "asterixdb", "llm", "sql++", "model-context-protocol"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.scripts]
asterixdb-mcp-server = "asterixdb_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anyio>=4.3",
    "coverage>=7.4",
    "ruff>=0.4",
    "mypy>=1.9",
    "bandit>=1.7",
    "safety>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asterixdb_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
warn_unreachable = true

[tool.bandit]
# Scan application code only; tests and the local virtualenv are not shipped.
exclude_dirs = ["tests", ".venv"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
# Project policy: 100% line+branch coverage required; coverage report exits non-zero below this.
fail_under = 100
show_missing = true
